Rationalized option handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,34 +20,24 @@ endif()
 
 project(ASL)
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 # Set the path to CMake modules.
 set(AMPL_CMAKE_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/support/cmake)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${AMPL_CMAKE_MODULE_DIR})
-if(NOT BUILD_MCMODELLARGE)
-  option(BUILD_MCMODELLARGE "Build the library linked with mcmodel=large flag, used for compiling lgo" OFF)
-endif()
 
-if(NOT BUILD_LICCHECK_PRINT)
-  option(BUILD_LICCHECK_PRINT "Build libraries with licence check flag" OFF)
-endif()
-if(NOT BUILD_DYNRT_LIBS)
-  option(BUILD_DYNRT_LIBS "Build the libraries linked against the dynamic runtime (windows only)" OFF)
-endif()
-if(NOT BUILD_MT_LIBS)
-  option(BUILD_MT_LIBS "Build the multithreaded library" OFF)
-endif()
-if(NOT BUILD_CPP)
-  option(BUILD_CPP "Build the cpp interface" OFF)
-endif()
-if(NOT BUILD_F2C)
-  option(BUILD_F2C "Build the f2c library" OFF)
-endif()
+option(BUILD_MCMODELLARGE "Build the library linked with mcmodel=large flag, used for compiling lgo" OFF)
+option(BUILD_LICCHECK_PRINT "Build libraries with licence check flag" OFF)
+option(BUILD_DYNRT_LIBS "Build the libraries linked against the dynamic runtime (windows only)" OFF)
+option(BUILD_MT_LIBS "Build the multithreaded library" OFF)
+option(BUILD_CPP "Build the cpp interface" OFF)
+option(BUILD_F2C "Build the f2c library" OFF)
+
 if(NOT BUILD_EXAMPLES)
   option(BUILD_EXAMPLES "Build the examples" OFF)
 else()
   option(BUILD_F2C "Build the f2c library" ON)
+  option(BUILD_EXAMPLES "Build the examples" ON)
   set(BUILD_F2C ON)
 endif()
 
