--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@
 if (${CMAKE_VERSION} VERSION_GREATER "3.13.0")
   cmake_policy(SET CMP0077 NEW)
 endif()
-
+if (${CMAKE_VERSION} VERSION_GREATER "3.15.0")
+  cmake_policy(SET CMP0091 NEW)
+endif()
 project(ASL)
 
 cmake_minimum_required(VERSION 3.0)
